--- a/busybox/Dockerfile
+++ b/busybox/Dockerfile
@@ -11,4 +11,4 @@ FROM       busybox:latest
 MAINTAINER cucy <zhouru1991@vip.qq.com>  # 谁创建，谁维护
 
 
-ADD http://www.hop5.in/yum/el6/kernel-ml-aufs-3.10.5-3.el6.x86_64.rpm /
+ADD https://github.com/kubernetes/kubernetes/releases/download/v1.3.10/kubernetes.tar.gz /
