--- a/zabbix/Dockerfile
+++ b/zabbix/Dockerfile
@@ -6,7 +6,7 @@
 ##
 
 # 基础镜像
-FROM       registry.cn-beijing.aliyuncs.com/cucy/zabbix:3.2.1
+FROM   aa/aa:1.1
 MAINTAINER cucy <zhouru1991@vip.qq.com>  # 谁创建，谁维护
 
 # 环境变量可以写多个
@@ -14,5 +14,6 @@ ENV TZ "Asia/Shanghai"
 # ENV TERM xterm
 
 
-EXPOSE 3306 10051 80
+#EXPOSE 3306 10051 80
 
+#ENTRYPOINT ["/scripts/start"]
