--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -1,4 +1,8 @@
 FROM golang:1.10.3 
 
 
-RUN go get -d -v    github.com/gobuffalo/buffalo/buffalo   /tmp
+RUN mkdir /tmp/godir
+
+
+
+RUN EXPORT GOPATH=/tmp/dir && go get -d -v    github.com/gobuffalo/buffalo/buffalo   
