--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -5,4 +5,4 @@ RUN mkdir /tmp/godir
 
 
 
-RUN EXPORT GOPATH=/tmp/dir && go get -d -v    github.com/gobuffalo/buffalo/buffalo   
+RUN export GOPATH=/tmp/dir && go get -u -v    github.com/gobuffalo/buffalo/buffalo   
