--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -4,4 +4,4 @@ FROM golang:1.10.3
 RUN mkdir /tmp/godir/{bin,pkg,src}
 ENV GOPATH=/tmp/godir
 
-RUN export GOPATH=/tmp/dir && go get -u -v    github.com/gobuffalo/buffalo/buffalo   
+RUN export GOPATH=/tmp/godir && go get -u -v    github.com/gobuffalo/buffalo/buffalo   
