--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.10.3 
 
 
-RUN mkdir /tmp/godir/{bin,pkg,src}
+RUN mkdir -p /tmp/godir/{bin,pkg,src}
 ENV GOPATH=/tmp/godir
 
 RUN export GOPATH=/tmp/godir && go get -u -v    github.com/gobuffalo/buffalo/buffalo   
