--- a/busybox/Dockerfile
+++ b/busybox/Dockerfile
@@ -7,7 +7,7 @@
 
 # 基础镜像
 FROM       busybox:latest
-
+RUN wget https://github.com/prometheus/prometheus/releases/download/v2.12.0/prometheus-2.12.0.linux-amd64.tar.gz
 MAINTAINER cucy <zhouru1991@vip.qq.com>  # 谁创建，谁维护
 
 
