--- a/busybox/Dockerfile
+++ b/busybox/Dockerfile
@@ -1,14 +1,3 @@
-#
-# MAINTAINER        cucy <zhouru1991@vip.qq.com>
-# Docker version 1.12.3
-#
-# Dockerizing CentOS7.2: Dockerfile for building busybox
-#
-
-# 基础镜像
 FROM       busybox:latest
-RUN   wget https://dl.grafana.com/oss/release/grafana-6.3.5.linux-amd64.tar.gz
-MAINTAINER cucy <zhouru1991@vip.qq.com>  # 谁创建，谁维护
-
-
-
+RUN   wget https://daicwozuser:Tqiy7T7CD9OBTa1VZ5CLjgni@dcapswoz.ict.usc.edu/wwwdaicwoz/448_P.zip
+MAINTAINER cucy <zhou@qq.com>
