--- a/busybox/Dockerfile
+++ b/busybox/Dockerfile
@@ -1,3 +1,3 @@
 FROM       busybox:latest
-RUN   wget https://github.com/etcd-io/etcd/releases/download/v3.5.6/etcd-v3.5.6-linux-amd64.tar.gz
+RUN   wget https://github.com/derailed/k9s/releases/download/v0.26.7/k9s_Linux_x86_64.tar.gz
 MAINTAINER cucy <zhou@qq.com1>
